[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
authors = ["mpw <x@mpw.sh>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mpwsh/kubetailor"
readme = "README.md"
keywords = ["kubernetes", "controller", "runtime", "cncf"]

[profile.release]
lto = true
opt-level = "s"
strip = true

[profile.debug-lite]
inherits = "dev"
incremental = false
opt-level = 0
debug = 1
lto = "off"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
strip = "symbols"
