[package]
name = "operator"
version = "0.1.0"
authors = ["mpw <x@mpw.sh>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mpwsh/kubetailor"
readme = "README.md"
keywords = ["kubernetes", "controller", "runtime", "cncf"]
default-run = "operator"

[dependencies]
tokio = { version = "1.35", features = [
    "macros",
    "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.82", default-features = true, features = [
    "derive",
    "runtime",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.18", default-features = false, features = [
    "v1_23",
] } # Kube-rs depends on k8s-openapi
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
thiserror = "1"    # Custom Error definitions and convenient error mappings
base64 = "0.21.7"
log = "0.4.20"
env_logger = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"] }
kubetailor = { path = "../lib" }
