[package]
name = "operator"
default-run = "operator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1.35", features = [
  "macros",
  "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
thiserror = "1"                                                                # Custom Error definitions and convenient error mappings
base64 = "0.22"
log = "0.4.20"
env_logger = "0.11.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"] }
kubetailor = { path = "../lib" }
