[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
log = "0.4.20"
env_logger = "0.11.1"
anyhow = "1.0"
sha1_smol = "1.0.0"
kube = { version = "0.82", default-features = true, features = [
  "derive",
  "runtime",
] }
k8s-openapi = { version = "0.20", default-features = false, features = [
  "v1_23",
] }
kubetailor = { version = "0.1", path = "../lib" }
serde_yaml = "0.9.30"
regex = "1.10.3"
bytesize = { version = "1.3.0", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
