[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
kubetailor = { version = "0.1", path = "../lib" }
actix-web = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
log = "0.4.20"
env_logger = "0.11.1"
anyhow = "1.0"
sha1_smol = "1.0.0"
futures = "0.3.30"
serde_yaml = "0.9.30"
regex = "1.10.3"
bytesize = { version = "1.3.0", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
