[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
kubetailor = { version = "0.1", path = "../lib" }
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.26"
env_logger = "0.11.7"
anyhow = "1.0"
sha1_smol = "1.0.1"
futures = "0.3.31"
serde_yaml = "0.9.34"
regex = "1.11.1"
bytesize = { version = "1.3.2", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.40"
